<resources>
    <string name="app_name">Quiz App</string>
    <string name="question_1">Who was the first man in history to ascend all fourteen eight-thousanders?</string>
    <string name="question_1_answer_1">Reinhold Messner</string>
    <string name="question_1_answer_2">Jerzy Kukuczka</string>
    <string name="question_1_answer_3">Denis Urubko</string>
    <string name="question_1_answer_4">Wojciech Kurtyka</string>
    <string name="question_2">What is the second highest mountain on Earth?</string>
    <string name="question_2_answer_1">Lhotse</string>
    <string name="question_2_answer_2">Makalu</string>
    <string name="question_2_answer_3">Cho Oyu</string>
    <string name="question_2_answer_4">K2</string>
    <string name="question_3">In which year the first ever successful ascent on Mount Everest was recorded?</string>
    <string name="question_3_answer_1">1935</string>
    <string name="question_3_answer_2">1948</string>
    <string name="question_3_answer_3">1953</string>
    <string name="question_3_answer_4">1960</string>
    <string name="question_4">Which country has the most eight-thousanders?</string>
    <string name="question_4_answer_1">Nepal</string>
    <string name="question_4_answer_2">China</string>
    <string name="question_4_answer_3">India</string>
    <string name="question_4_answer_4">Pakistan</string>
    <string name="question_5">Chomolungma is the Tibetan name for which mountain?</string>
    <string name="question_5_answer_1">Nanga Parbat</string>
    <string name="question_5_answer_2">Broad Peak</string>
    <string name="question_5_answer_3">Lhotse</string>
    <string name="question_5_answer_4">Mount Everest</string>
    <string name="question_6">Which of these mountains do not lie in the Himalayas?</string>
    <string name="question_6_answer_1">Aconcagua</string>
    <string name="question_6_answer_2">Dhaulagiri</string>
    <string name="question_6_answer_3">Shishapangma</string>
    <string name="question_6_answer_4">Kilimanjaro</string>
    <string name="question_7">How many winter expeditions to K2 has been held so far?</string>
    <string name="question_7_hint">Please enter a number</string>
    <string name="score_message_1">You answered correctly to</string>
    <string name="score_message_2">out of</string>
    <string name="score_message_3">questions!</string>
    <string name="question_not_answered">You missed</string>
    <string name="perfect_score">Perfect Score! Congratulation!</string>
    <string name="score_button_text">Score</string>
    <string name="finish_button_text">Finish</string>
    <string name="start_button_text">Start</string>
    <string name="view_answers_text">View Answers</string>
    <string name="userGreetings">Hi</string>
    <string name="no_input_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="welcome_message_1">Welcome to the Himalayas!</string>
    <string name="welcome_message_2">This quiz is about the Himalaya mountains and some of their historical facts. Good luck!</string>
</resources>
