<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView style="@style/imageCardViewStyle">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/manaslu" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/textCardViewStyle">

            <TextView
                style="@style/textViewStyle"
                android:text="@string/question_1" />

            <RadioGroup
                android:id="@+id/radio_group_question_1"
                style="@style/radioGroupStyle">

                <RadioButton
                    android:id="@+id/question_1_answer_1_correct"
                    style="@style/radioButtonStyle"
                    android:text="@string/question_1_answer_1" />

                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="@string/question_1_answer_2" />

                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="@string/question_1_answer_3" />

                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="@string/question_1_answer_4" />
            </RadioGroup>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/textCardViewStyle">

            <TextView
                style="@style/textViewStyle"
                android:text="@string/question_2" />

            <RadioGroup
                android:id="@+id/radio_group_question_2"
                style="@style/radioGroupStyle">

                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="@string/question_2_answer_1" />

                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="@string/question_2_answer_2" />

                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="@string/question_2_answer_3" />

                <RadioButton
                    android:id="@+id/question_2_answer_4_correct"
                    style="@style/radioButtonStyle"
                    android:text="@string/question_2_answer_4" />
            </RadioGroup>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/textCardViewStyle">

            <TextView
                style="@style/textViewStyle"
                android:text="@string/question_3" />

            <RadioGroup
                android:id="@+id/radio_group_question_3"
                style="@style/radioGroupStyle">

                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="@string/question_3_answer_1" />

                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="@string/question_3_answer_2" />

                <RadioButton
                    android:id="@+id/question_3_answer_3_correct"
                    style="@style/radioButtonStyle"
                    android:text="@string/question_3_answer_3" />

                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="@string/question_3_answer_4" />
            </RadioGroup>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/textCardViewStyle">

            <TextView
                style="@style/textViewStyle"
                android:text="@string/question_4" />

            <RadioGroup
                android:id="@+id/radio_group_question_4"
                style="@style/radioGroupStyle">

                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="@string/question_4_answer_1" />

                <RadioButton
                    android:id="@+id/question_4_answer_2_correct"
                    style="@style/radioButtonStyle"
                    android:text="@string/question_4_answer_2" />

                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="@string/question_4_answer_3" />

                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="@string/question_4_answer_4" />
            </RadioGroup>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/textCardViewStyle">

            <TextView
                style="@style/textViewStyle"
                android:text="@string/question_5" />

            <RadioGroup
                android:id="@+id/radio_group_question_5"
                style="@style/radioGroupStyle">

                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="@string/question_5_answer_1" />

                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="@string/question_5_answer_2" />

                <RadioButton
                    style="@style/radioButtonStyle"
                    android:text="@string/question_5_answer_3" />

                <RadioButton
                    android:id="@+id/question_5_answer_4_correct"
                    style="@style/radioButtonStyle"
                    android:text="@string/question_5_answer_4" />
            </RadioGroup>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/submit_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="submit"
            android:textAllCaps="true" />
    </LinearLayout>
</ScrollView>